--- a/panc.bib
+++ b/panc.bib
@@ -1,29 +1,105 @@
-
-
-
-
-
-
-@article{doi:10.1056/NEJMoa1111103,
-author = {Elmunzer, B. Joseph and Scheiman, James M. and Lehman, Glen A. and Chak, Amitabh and Mosler, Patrick and Higgins, Peter D.R. and Hayward, Rodney A. and Romagnuolo, Joseph and Elta, Grace H. and Sherman, Stuart and Waljee, Akbar K. and Repaka, Aparna and Atkinson, Matthew R. and Cote, Gregory A. and Kwon, Richard S. and McHenry, Lee and Piraka, Cyrus R. and Wamsteker, Erik J. and Watkins, James L. and Korsnes, Sheryl J. and Schmidt, Suzette E. and Turner, Sarah M. and Nicholson, Sylvia and Fogel, Evan L.},
-title = {A Randomized Trial of Rectal Indomethacin to Prevent Post-ERCP Pancreatitis},
-journal = {New England Journal of Medicine},
-volume = {366},
-number = {15},
-pages = {1414-1422},
-year = {2012},
-doi = {10.1056/NEJMoa1111103},
-    note ={PMID: 22494121},
-
-URL = { 
-        https://doi.org/10.1056/NEJMoa1111103
-    
-},
-eprint = { 
-        https://doi.org/10.1056/NEJMoa1111103
-    
+﻿@article{RN42648,
+   author = {Archibugi, Livia and Ciarfaglia, Gianmarco and Cárdenas-Jaén, Karina and Poropat, Goran and Korpela, Taija and Maisonneuve, Patrick and Aparicio, José R. and Casellas, Juan Antonio and Arcidiacono, Paolo Giorgio and Mariani, Alberto and Stimac, Davor and Hauser, Goran and Udd, Marianne and Kylänpää, Leena and Rainio, Mia and Di Giulio, Emilio and Vanella, Giuseppe and Lohr, Johannes Matthias and Valente, Roberto and Arnelo, Urban and Fagerstrom, Niklas and De Pretis, Nicolò and Gabbrielli, Armando and Brozzi, Lorenzo and Capurso, Gabriele and de-Madaria, Enrique},
+   title = {Machine learning for the prediction of post-ERCP pancreatitis risk: A proof-of-concept study},
+   journal = {Digestive and Liver Disease},
+   volume = {55},
+   number = {3},
+   pages = {387-393},
+   ISSN = {1590-8658},
+   DOI = {https://doi.org/10.1016/j.dld.2022.10.005},
+   url = {https://www.sciencedirect.com/science/article/pii/S1590865822007381},
+   year = {2023},
+   type = {Journal Article}
 }
 
+@article{RN42643,
+   author = {Collins, G. S. and Reitsma, J. B. and Altman, D. G. and Moons, K. G.},
+   title = {Transparent Reporting of a multivariable prediction model for Individual Prognosis or Diagnosis (TRIPOD): the TRIPOD statement},
+   journal = {Ann Intern Med},
+   volume = {162},
+   number = {1},
+   pages = {55-63},
+   ISSN = {0003-4819},
+   DOI = {10.7326/m14-0697},
+   year = {2015},
+   type = {Journal Article}
 }
 
+@article{RN42642,
+   author = {Elmunzer, B. Joseph and Scheiman, James M. and Lehman, Glen A. and Chak, Amitabh and Mosler, Patrick and Higgins, Peter D. R. and Hayward, Rodney A. and Romagnuolo, Joseph and Elta, Grace H. and Sherman, Stuart and Waljee, Akbar K. and Repaka, Aparna and Atkinson, Matthew R. and Cote, Gregory A. and Kwon, Richard S. and McHenry, Lee and Piraka, Cyrus R. and Wamsteker, Erik J. and Watkins, James L. and Korsnes, Sheryl J. and Schmidt, Suzette E. and Turner, Sarah M. and Nicholson, Sylvia and Fogel, Evan L.},
+   title = {A Randomized Trial of Rectal Indomethacin to Prevent Post-ERCP Pancreatitis},
+   journal = {New England Journal of Medicine},
+   volume = {366},
+   number = {15},
+   pages = {1414-1422},
+   ISSN = {0028-4793},
+   DOI = {10.1056/NEJMoa1111103},
+   url = {https://doi.org/10.1056/NEJMoa1111103},
+   year = {2012},
+   type = {Journal Article}
+}
+
+@article{RN42645,
+   author = {Freeman, M. L.},
+   title = {Pancreatic stents for prevention of post-endoscopic retrograde cholangiopancreatography pancreatitis},
+   journal = {Clin Gastroenterol Hepatol},
+   volume = {5},
+   number = {11},
+   pages = {1354-65},
+   ISSN = {1542-3565},
+   DOI = {10.1016/j.cgh.2007.09.007},
+   year = {2007},
+   type = {Journal Article}
+}
+
+@article{RN42649,
+   author = {Fu, Z. and Song, J. and Pi, Y. and Sun, X. and Liu, M. and Xiao, Z. and Chen, J.},
+   title = {A Risk Prediction Model for Post-endoscopic Retrograde Cholangiopancreatography Pancreatitis After Stent Insertion for Malignant Biliary Obstruction: Development and Validation},
+   journal = {Dig Dis Sci},
+   ISSN = {0163-2116},
+   DOI = {10.1007/s10620-022-07649-8},
+   year = {2022},
+   type = {Journal Article}
+}
+
+@article{RN42644,
+   author = {Peduzzi, Peter and Concato, John and Kemper, Elizabeth and Holford, Theodore R. and Feinstein, Alvan R.},
+   title = {A simulation study of the number of events per variable in logistic regression analysis},
+   journal = {Journal of Clinical Epidemiology},
+   volume = {49},
+   number = {12},
+   pages = {1373-1379},
+   ISSN = {0895-4356},
+   DOI = {https://doi.org/10.1016/S0895-4356(96)00236-3},
+   url = {https://www.sciencedirect.com/science/article/pii/S0895435696002363},
+   year = {1996},
+   type = {Journal Article}
+}
+
+@article{RN42646,
+   author = {Thaker, A. M. and Mosko, J. D. and Berzin, T. M.},
+   title = {Post-endoscopic retrograde cholangiopancreatography pancreatitis},
+   journal = {Gastroenterol Rep (Oxf)},
+   volume = {3},
+   number = {1},
+   pages = {32-40},
+   ISSN = {2052-0034 (Print)},
+   DOI = {10.1093/gastro/gou083},
+   year = {2015},
+   type = {Journal Article}
+}
+
+@article{RN42647,
+   author = {Zheng, R. and Chen, M. and Wang, X. and Li, B. and He, T. and Wang, L. and Xu, G. and Yao, Y. and Cao, J. and Shen, Y. and Wang, Y. and Zhu, H. and Zhang, B. and Wu, H. and Zou, X. and He, G.},
+   title = {Development and validation of a risk prediction model and scoring system for post-endoscopic retrograde cholangiopancreatography pancreatitis},
+   journal = {Ann Transl Med},
+   volume = {8},
+   number = {20},
+   pages = {1299},
+   ISSN = {2305-5839 (Print)
+2305-5839},
+   DOI = {10.21037/atm-20-5769},
+   year = {2020},
+   type = {Journal Article}
+}
 
